--- a/css/components/_email.css
+++ b/css/components/_email.css
@@ -47,12 +47,16 @@
 
     border-radius: 12px;
     color: #5B5F62;
+   
+    
+   
 }
 
 
 
 .email__address {
- 
+    
+    margin: 0;
     margin-bottom: 23px;
     margin-top: 23px;
     margin-left: 26px;
@@ -60,6 +64,8 @@
     font-size: 14px;
     font-weight: 400;
     color: #5B5F62;
+  
+    
 }
 
 .block__icon:hover {
@@ -72,13 +78,20 @@
 
 .block__icon {
     transition: transform 0.3s ease-in-out;
-
-    margin-left: 207px;
+    margin-left: 10px;
+   margin-left: auto;
     background-color: #F66F4D;
     margin-top: 10px;
     margin-right: 12px;
     margin-bottom: 10px;
     border-radius: 12px;
+    
 
 
+}
+
+.block__icon img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: contain;
 }
