--- a/css/components/_customer.css
+++ b/css/components/_customer.css
@@ -2,22 +2,16 @@
     margin-top: 37px;
     display: flex;
     margin-bottom: 66px;
-<<<<<<< HEAD
-    gap: 120px;
-    justify-content: space-between;
-    padding: 0 15px;
+    gap: 60px;
 }
 
 .customer__img {
     margin-top: 66px;
-    flex: 0 0 auto;
-=======
 }
 
-.customer__img {
-    margin-right: 175px;
-    margin-top: 66px;
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
+.customer__img img {
+    max-width: 100%;
+    height: auto;
 }
 
 .customer__border {
@@ -26,25 +20,12 @@
     background: linear-gradient(#FFD482, #FFBE82);
     max-width: 67px;
     height: 8px;
-<<<<<<< HEAD
-    width: 67px;
-    border-radius: 4px;
-}
-
-.customer__comment {
-    margin-top: 105px;
-    max-width: 600px;
-=======
     width: 67;
     border-radius: 4px;
-  
 }
-
-
 
 .customer__comment {
     margin-top: 105px;
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
 }
 
 .customer__title {
@@ -57,23 +38,9 @@
 
 .customer__feedback {
     background-color: #FFFFFF;
-<<<<<<< HEAD
-    padding: 32px 34px 0 30px;
+    padding: 32px 34px 30px;
     max-width: 537px;
     border-radius: 14px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
-=======
-    padding-left: 30px;
-    padding-top: 32px;
-    padding-right: 34px;
-    padding-bottom: 131px;
-    max-width: 537px;
-    max-height: 283px;
-    border-radius: 14px;
-
-
-
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
 }
 
 .Andrew__comment {
@@ -83,11 +50,6 @@
     max-width: 473px;
     color: #5B5F62;
     margin-bottom: 27px;
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
 }
 
 .star__png {
@@ -103,41 +65,23 @@
 
 .andrew__title {
     font-size: 12px;
-<<<<<<< HEAD
     font-weight: 400;
-=======
-    font-weight: 400px;
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
     line-height: 12px;
     color: #5B5F62;
 }
 
-<<<<<<< HEAD
 .bottom__content {
     display: flex;
-    padding-bottom: 40px;
     justify-content: space-between;
     align-items: flex-end;
-=======
-
-.bottom__content {
-    display: flex;
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
 }
 
 .buttons__feedback {
     gap: 16px;
     display: flex;
-<<<<<<< HEAD
 }
 
 .buttons__feedback button img {
-=======
-
-}
-
-.buttons__feedback button img{
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
     transition: transform 0.2s ease-in-out;
 }
 
@@ -146,48 +90,37 @@
     transform: scale(1.15);
 }
 
-.bottom__arrows {
-    margin-left: auto;
-    margin-top: auto;
-<<<<<<< HEAD
-}
 
-.customer__profile__image {
-    width: 390px;
-    height: auto;
-    max-width: 100%;
-    border-radius: 50%;
-}
-
-
-
-@media (max-width: 1035px) {
+@media (max-width: 1024px) {
     .customer__about__us {
-        flex-direction: column;
-        align-items: center;
-        gap: 40px;
-    }
-
-    .customer__comment {
-        margin-top: 0;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-    }
-
-
-    .customer__feedback {
-        width: 100%;
-    }
-
-    .bottom__arrows {
-        margin: 0;
+        gap: 30px;
     }
 }
 
 @media (max-width: 768px) {
+    .customer__about__us {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+     
+    }
+
    
+
+    .customer__comment {
+        margin-top: 30px;
+    }
+
+    .customer__border {
+        margin: 0 auto;
+    }
+
+   
+
+    .customer__feedback {
+        margin: 0 auto;
+        padding: 20px;
+    }
 
     .bottom__content {
         flex-direction: column;
@@ -195,21 +128,27 @@
         gap: 20px;
     }
 
- 
-
-    .customer__profile__image {
-        width: 300px;
-    }
-}
-
-@media (max-width: 441px) {
-
-    .customer__feedback {
-        padding: 20px 20px 0 20px;
-    }
+   
 
     
-
-=======
->>>>>>> 7af18b3ae0f34910c31de8924e2bbd25ce2eda9f
 }
+
+@media (max-width: 480px) {
+ 
+
+    .customer__feedback {
+        padding: 20px;
+    }
+
+   
+    .bottom__content {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .bottom__block {
+        text-align: center;
+    }
+}
+
