--- a/css/components/categories.css
+++ b/css/components/categories.css
@@ -90,4 +90,82 @@
     color: white;
 }
 
+@media (max-width: 1200px) {
+    .categories__inner {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .categories__description {
+        max-width: 100%;
+    }
+
+    .img__categories {
+        margin: 0;
+    }
+  
+}
+
+@media (max-width: 992px) {
+    .categories__title {
+        font-size: 48px;
+    }
+
+    .categories__description {
+        font-size: 15px;
+    }
+
+    .item__description {
+        font-size: 20px;
+    }
+
+    .visit__btn {
+        font-size: 16px;
+        top: 80px;
+        left: 40px;
+        right: 40px;
+    }
+
+  
+}
+
+@media (max-width: 768px) {
+    .categories__title {
+        font-size: 40px;
+    }
+
+    .categories__description {
+        font-size: 14px;
+    }
+
+    .item__description {
+        font-size: 18px;
+    }
+
+    .visit__btn {
+        top: 60px;
+        left: 30px;
+        right: 30px;
+    }
+}
+
+@media (max-width: 576px) {
+    .categories__title {
+        font-size: 32px;
+        padding-bottom: 12px;
+    }
+
+    .categories__description {
+        font-size: 13px;
+    }
+
+    .visit__btn {
+        font-size: 14px;
+        top: 60px;
+        left: 30px;
+        right: 30px;
+    }
+}
+
 
