--- a/css/components/categories.css
+++ b/css/components/categories.css
@@ -59,16 +59,20 @@
     padding-top: 18px;
     padding-bottom: 20px;
     text-align: center;
+    width: 100%;
 }
 
 .categories__item {
     transition: transform 0.2s ease-in-out;
     position: relative;
-    width: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .categories__item__img {
-    width: 100%;
+    width: auto;
+    
 }
 
 .visit__btn {
@@ -79,10 +83,12 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: all 0.3s ease;
 }
 
 .categories__item:hover .categories__item__img {
     filter: brightness(50%);
+    transition: all 0.3s ease;
 }
 
 .categories__item:hover .visit__btn {
@@ -107,7 +113,6 @@
 }
 
 
-
 @media (max-width: 768px) {
     .categories__title {
         font-size: 40px;
@@ -120,13 +125,7 @@
     .item__description {
         font-size: 20px;
     }
-}
 
-@media (max-width: 576px) {
-    .categories__title {
-        font-size: 40px;
-    }
-    
 }
 
 
